Drop Graphene so we can finally use latest Selenium and ditch HtmlUnit Update OmniFacesIT to catch up loss of Graphene Bumped test server versions where possible Removed WF/GF Mojarra3 and added Liberty MyFaces3

--- a/.github/workflows/4.x.maven.yml
+++ b/.github/workflows/4.x.maven.yml
@@ -32,7 +32,7 @@ jobs:
     continue-on-error: true
     strategy:
       matrix:
-        server: [ wildfly-faces4, wildfly-faces3, glassfish-faces4, glassfish-faces3, tomee-faces3, tomcat-mojarra4, tomcat-mojarra3, tomcat-myfaces3 ]
+        server: [ wildfly-mojarra4, liberty-myfaces3, glassfish-mojarra4, tomee-myfaces3, tomcat-mojarra4, tomcat-mojarra3, tomcat-myfaces4, tomcat-myfaces3 ]
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 11
