--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,11 @@
 	</repositories>
 
 	<dependencies>
+		<dependency>
+			<groupId>com.github.ben-manes.caffeine</groupId>
+			<artifactId>caffeine</artifactId>
+			<version>3.1.8</version>
+		</dependency>
 
 		<!-- Required Jakarta EE 9 dependencies. -->
 		<dependency>
