--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
 	<groupId>org.omnifaces</groupId>
 	<artifactId>omnifaces</artifactId>
-	<version>2.7.25-SNAPSHOT</version>
+	<version>2.7.25</version>
 	<packaging>jar</packaging>
 
 	<name>OmniFaces</name>
