--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "ES2021",
     "module": "commonjs",
     "rootDir": "src/main/resources/META-INF/resources/omnifaces/omnifaces.js",
     "outDir": "target/tsc",
