Add config to rerun failing IT tests two times more because some tests intermittently fail for a yet unclear reason

--- a/pom.xml
+++ b/pom.xml
@@ -485,6 +485,7 @@
                         </execution>
                     </executions>
                     <configuration>
+                        <rerunFailingTestsCount>2</rerunFailingTestsCount>
                         <systemPropertyVariables>
                             <profile.id>${project.activeProfiles[0].id}</profile.id>
                             <omnifaces.jar>${project.build.directory}/${project.build.finalName}.jar</omnifaces.jar>
